--- a/project/templates/main/home.html
+++ b/project/templates/main/home.html
@@ -8,4 +8,6 @@
     <div class="title m-3" align="center">
         <h1>Головна</h1>
     </div>
+
+    <a class="btn mt-3 mb-3" href="{{ url_for('views.theme') }}">Тема</a>
 {% endblock %}
