--- a/project/templates/main/profile.html
+++ b/project/templates/main/profile.html
@@ -1,6 +1,6 @@
 {% extends 'profile_layout.html' %}
 
-{% block username %}
+{% block profile_title %}
     Профіль користувача @{{ user.username }}
 {% endblock %}
 
