--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -13,15 +13,9 @@
         <!--
         <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='/images/icon.png') }}">
         -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link rel="stylesheet" href="{{ url_for('static', filename='styles/css/style.css') }}">
 
-        <style>
-            @media (min-width: 700px) {
-                .container{
-                    max-width: 700px;
-                }
-            }
-        </style>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     </head>
 
     <body>
