--- a/project/templates/main/profile_about.html
+++ b/project/templates/main/profile_about.html
@@ -1,6 +1,6 @@
 {% extends 'profile_layout.html' %}
 
-{% block username %}
+{% block profile_title %}
     Про користувача @{{ user.username }}
 {% endblock %}
 
