--- a/project/templates/profile_layout.html
+++ b/project/templates/profile_layout.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-    {% block username %}
+    {% block profile_title %}
     {% endblock %}
 {% endblock %}
 
