--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
-<html lang="uk" data-bs-theme="dark">
+<html lang="uk" data-bs-theme="{% if request.cookies.get('theme') %}{{ request.cookies.get('theme') }}{% else %}dark{% endif %}">
 
     <head>
         <meta charset="utf-8">
@@ -27,10 +27,15 @@
                     <!--
                     <img width="30" height="30" src="{{ url_for('static', filename='/images/icon.png') }}"/>
                     -->
+                    Articlify
                 </a>
+
+                <!--
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon">Articlify</span>
+                    <i class="fa-brands fa-adn"></i>
                 </button>
+                -->
 
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 
@@ -50,13 +55,23 @@
                         {% if current_user.is_authenticated %}
                             <li class="nav-item">
                                 <div class="dropdown">
-                                    <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                        {{ current_user.username }}
+                                    <button class="btn dropdown-toggle text-white" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        @{{ current_user.username }}
                                     </button>
                                     <ul class="dropdown-menu dropdown-menu-end">
-                                        <li><a class="dropdown-item" href="{{ url_for('views.profile', username=current_user.username) }}">@{{ current_user.username }}</a></li>
+                                        <li>
+                                            <a class="dropdown-item" href="{{ url_for('views.profile', username=current_user.username) }}">
+                                                @{{ current_user.username }}
+                                            </a>
+                                        </li>
+
                                         <li><hr class="dropdown-divider"></li>
-                                        <li><a class="dropdown-item" href="{{ url_for('auth.log_out') }}">Вихід</a></li>
+
+                                        <li>
+                                            <a class="dropdown-item" href="{{ url_for('auth.log_out') }}">
+                                                Вихід
+                                            </a>
+                                        </li>
                                     </ul>
                                 </div>
                             </li>
@@ -75,6 +90,37 @@
                                 </a>
                             </li>
                         {% endif %}
+
+                        <li class="nav-item ms-2">
+                            <div class="dropdown">
+                                <button class="btn dropdown-toggle text-white" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Тема
+                                </button>
+                                <ul class="dropdown-menu dropdown-menu-end">
+                                    <li>
+                                        <button class="dropdown-item" onclick="setTheme('light')">
+                                             
+                                            <i class="fa-regular fa-sun"></i>
+                                            Світла
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button class="dropdown-item" onclick="setTheme('dark')">
+                                             
+                                            <i class="fa-regular fa-moon"></i>
+                                            Темна
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button class="dropdown-item" onclick="setTheme('auto')">
+                                             
+                                            <i class="fa-solid fa-circle-half-stroke"></i>
+                                            Авто
+                                        </button>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
 
                     </ul>
 
@@ -99,6 +145,9 @@
             {% endblock %}
         </div>
 
+        <script src="{{ url_for('static', filename='scripts/customize/custom.js') }}"></script>
+
+        <script src="https://kit.fontawesome.com/a8e1094a8d.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
 
