--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
-<html lang="uk" data-bs-theme="{% if request.cookies.get('theme') %}{{ request.cookies.get('theme') }}{% else %}dark{% endif %}">
+<html lang="uk" data-bs-theme="{% if request.cookies.get('theme') %}{{ request.cookies.get('theme') }}{% else %}light{% endif %}">
 
     <head>
         <meta charset="utf-8">
@@ -10,9 +10,8 @@
             {% block title %}
             {% endblock %}
         </title>
-        <!--
-        <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='/images/icon.png') }}">
-        -->
+
+        <link rel="icon" type="image/x-icon" href="{{ url_for('views.favicon') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='styles/css/style.css') }}">
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -24,18 +23,9 @@
             <div class="container-xxl container-fluid">
 
                 <a class="navbar-brand" href="{{ url_for('views.home') }}">
-                    <!--
-                    <img width="30" height="30" src="{{ url_for('static', filename='/images/icon.png') }}"/>
-                    -->
-                    Articlify
+                    <img class="d-inline-block align-text-top" style="width: 26.4px; height: auto;" src="{{ url_for('views.favicon') }}"/>
+                    <span>Articlify</span>
                 </a>
-
-                <!--
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon">Articlify</span>
-                    <i class="fa-brands fa-adn"></i>
-                </button>
-                -->
 
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 
@@ -45,6 +35,13 @@
                             <a class="nav-link {% if request.endpoint == 'views.home' %}active{% endif %}"
                                href="{{ url_for('views.home') }}">
                                 Головна
+                            </a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.endpoint == 'views.feedback' %}active{% endif %}"
+                               href="{{ url_for('views.feedback') }}">
+                                Зворотній зв'язок
                             </a>
                         </li>
 
