--- a/project/templates/main/feedback.html
+++ b/project/templates/main/feedback.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}
+{% extends 'layouts/layout.html' %}
 {% from 'bootstrap5/form.html' import render_form %}
 
 {% block title %}
@@ -15,4 +15,3 @@
     </div>
 
 {% endblock %}
-
