--- a/project/templates/auth/sign_up.html
+++ b/project/templates/auth/sign_up.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}
+{% extends 'layouts/layout.html' %}
 {% from 'bootstrap5/form.html' import render_form %}
 
 {% block title %}
