--- a/project/templates/layouts/layout.html
+++ b/project/templates/layouts/layout.html
@@ -19,13 +19,17 @@
 
     <body>
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-success text-white p-2">
+        <nav class="navbar navbar-expand-lg p-2 bg-body-tertiary">
             <div class="container-xxl container-fluid">
 
                 <a class="navbar-brand" href="{{ url_for('views.home') }}">
                     <img class="d-inline-block align-text-top" style="width: 26.4px; height: auto;" src="{{ url_for('views.favicon') }}"/>
                     <span>Articlify</span>
                 </a>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 
@@ -52,13 +56,21 @@
                         {% if current_user.is_authenticated %}
                             <li class="nav-item">
                                 <div class="dropdown">
-                                    <button class="btn dropdown-toggle text-white" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                         @{{ current_user.username }}
                                     </button>
-                                    <ul class="dropdown-menu dropdown-menu-end">
+                                    <ul class="dropdown-menu dropdown-menu-end mt-2">
                                         <li>
                                             <a class="dropdown-item" href="{{ url_for('views.profile', username=current_user.username) }}">
-                                                @{{ current_user.username }}
+                                                Профіль
+                                            </a>
+                                        </li>
+
+                                       <li><hr class="dropdown-divider"></li>
+
+                                        <li>
+                                            <a class="dropdown-item" href="{{ url_for('views.settings') }}">
+                                                Налаштування
                                             </a>
                                         </li>
 
@@ -87,37 +99,6 @@
                                 </a>
                             </li>
                         {% endif %}
-
-                        <li class="nav-item ms-2">
-                            <div class="dropdown">
-                                <button class="btn dropdown-toggle text-white" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Тема
-                                </button>
-                                <ul class="dropdown-menu dropdown-menu-end">
-                                    <li>
-                                        <button class="dropdown-item" onclick="setTheme('light')">
-                                             
-                                            <i class="fa-regular fa-sun"></i>
-                                            Світла
-                                        </button>
-                                    </li>
-                                    <li>
-                                        <button class="dropdown-item" onclick="setTheme('dark')">
-                                             
-                                            <i class="fa-regular fa-moon"></i>
-                                            Темна
-                                        </button>
-                                    </li>
-                                    <li>
-                                        <button class="dropdown-item" onclick="setTheme('auto')">
-                                             
-                                            <i class="fa-solid fa-circle-half-stroke"></i>
-                                            Авто
-                                        </button>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
 
                     </ul>
 
