--- a/project/templates/main/profile.html
+++ b/project/templates/main/profile.html
@@ -1,4 +1,4 @@
-{% extends 'profile_layout.html' %}
+{% extends 'layouts/profile_layout.html' %}
 
 {% block profile_title %}
     Профіль користувача @{{ user.username }}
