--- a/project/templates/main/profile_about.html
+++ b/project/templates/main/profile_about.html
@@ -1,4 +1,4 @@
-{% extends 'profile_layout.html' %}
+{% extends 'layouts/profile_layout.html' %}
 
 {% block profile_title %}
     Про користувача @{{ user.username }}
