--- a/project/templates/main/settings.html
+++ b/project/templates/main/settings.html
@@ -1,12 +1,12 @@
 {% extends 'layouts/settings_layout.html' %}
 
 {% block settings_title %}
-    Загальні нашалтування
+    Загальні налаштування
 {% endblock %}
 
 {% block settings_content %}
     <div class="title mt-3 mb-3" align="center">
-        <h1>Загальні нашалтування</h1>
+        <h1>Загальні налаштування</h1>
     </div>
 
     <div class="settings mt-3 mb-3">
