--- a/project/static/styles/css/style.css
+++ b/project/static/styles/css/style.css
@@ -8,3 +8,9 @@
     width: 100px !important;
     height: 100px !important;
 }
+
+.pre {
+    white-space: pre-wrap !important;
+    overflow-wrap: break-word !important;
+    word-wrap: break-word !important;
+}
