--- a/project/templates/main/profile_about.html
+++ b/project/templates/main/profile_about.html
@@ -6,8 +6,8 @@
 
 {% block profile_content %}
     <div class="about mt-3 mb-3">
-        <!--
-            <p>bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla</p>
-        -->
+        <h3>Про себе</h3>
+
+        <p class="pre">{{ user.bio }}</p>
     </div>
 {% endblock %}
