--- a/project/templates/layouts/layout.html
+++ b/project/templates/layouts/layout.html
@@ -62,7 +62,7 @@
                                     <ul class="dropdown-menu dropdown-menu-end mt-2">
                                         <li>
                                             <a class="dropdown-item" href="{{ url_for('views.profile', username=current_user.username) }}">
-                                                Профіль
+                                                <i class="fa-regular fa-user"></i> Профіль
                                             </a>
                                         </li>
 
@@ -70,7 +70,7 @@
 
                                         <li>
                                             <a class="dropdown-item" href="{{ url_for('views.settings') }}">
-                                                Налаштування
+                                                <i class="fa-solid fa-gear"></i> Налаштування
                                             </a>
                                         </li>
 
@@ -78,7 +78,7 @@
 
                                         <li>
                                             <a class="dropdown-item" href="{{ url_for('auth.log_out') }}">
-                                                Вихід
+                                                <i class="fa-solid fa-right-from-bracket"></i> Вихід
                                             </a>
                                         </li>
                                     </ul>
@@ -112,7 +112,7 @@
                 {% if messages %}
                     {% for category, message in messages %}
                         <div class="alert alert-{% if category != 'message' %}{{ category }}{% else %}info{% endif %} alert-dismissible fade show m-2" role="alert">
-                            {{ message }}
+                            {{ message | safe }}
                             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                         </div>
                     {% endfor %}
@@ -122,8 +122,6 @@
             {% block content %}
             {% endblock %}
         </div>
-
-        <script src="{{ url_for('static', filename='scripts/customize/custom.js') }}"></script>
 
         <script src="https://kit.fontawesome.com/a8e1094a8d.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
