--- a/project/templates/layouts/settings_layout.html
+++ b/project/templates/layouts/settings_layout.html
@@ -12,21 +12,21 @@
             <li class="nav-item">
                 <a class="nav-link {% if request.endpoint == 'views.settings' %}active{% endif %}"
                    href="{{ url_for('views.settings') }}">
-                    Загальні
+                    <i class="fa-solid fa-sliders"></i> Загальні
                 </a>
             </li>
 
             <li class="nav-item">
                 <a class="nav-link {% if request.endpoint == 'views.account_settings' %}active{% endif %}"
                    href="{{ url_for('views.account_settings') }}">
-                    Акаунт
+                    <i class="fa-regular fa-id-card"></i> Акаунт
                 </a>
             </li>
 
             <li class="nav-item">
                 <a class="nav-link {% if request.endpoint == 'views.security_settings' %}active{% endif %}"
                    href="{{ url_for('views.security_settings') }}">
-                    Безпека
+                    <i class="fa-solid fa-shield-halved"></i> Безпека
                 </a>
             </li>
         </ul>
