--- a/project/templates/layouts/profile_layout.html
+++ b/project/templates/layouts/profile_layout.html
@@ -8,34 +8,38 @@
 {% block content %}
     <div class="profile mt-5 mb-5">
         <div class="user-data mt-3 mb-3">
+            <div class="card"><div class="card-body p-2">
+
             <a class="btn m-0 p-0" href="{{ url_for('views.profile', username=user.username) }}">
                 <img src="{{ url_for('static', filename=user.profile_picture_path) }}" class="pfp rounded">
             </a>
             <a class="btn btn-lg fs-3" href="{{ url_for('views.profile', username=user.username) }}">@{{ user.username }}</a>
 
-            {% if current_user.id != user.id %}
-                <span class="subscription">
-                    {% if subscription %}
-                        <button class="btn btn-outline-danger" id="unfollowButton" type="button"
-                                onclick="unfollow({{ user.id }})">
-                            Відписатись
-                        </button>
-                    {% else %}
-                        <button class="btn btn-outline-success" id="followButton" type="button"
-                                onclick="follow({{ user.id }})">
-                            Підписатись
-                        </button>
-                    {% endif %}
-                </span>
+            {% if current_user.is_authenticated %}
+                {% if current_user.id != user.id %}
+                    <span class="subscription subscription-user">
+                        {% if subscription %}
+                            <button class="btn btn-outline-danger" id="unfollowButton" type="button"
+                                    onclick="unfollow({{ user.id }}, 'user')">
+                                Відписатись
+                            </button>
+                        {% else %}
+                            <button class="btn btn-outline-success" id="followButton" type="button"
+                                    onclick="follow({{ user.id }}, 'user')">
+                                Підписатись
+                            </button>
+                        {% endif %}
+                    </span>
+                {% endif %}
             {% endif %}
         </div>
 
-        <div class="subscription-data mt-3 mb-3">
-            <table class="table table-borderless">
+        <div class="subscription-data mt-3">
+            <table class="table table-borderless mb-1 m-0">
                 <thead>
                     <tr align="center">
                         <th scope="col">
-                            <button class="btn border w-75" type="button"
+                            <button class="btn border w-100" type="button"
                                     data-bs-toggle="modal" data-bs-target="#followersModal">
                                 Підписники
                                 <br>
@@ -43,7 +47,7 @@
                             </button>
                         </th>
                         <th scope="col">
-                            <button class="btn border w-75" type="button"
+                            <button class="btn border w-100" type="button"
                                     data-bs-toggle="modal" data-bs-target="#followingsModal">
                                 Підписки
                                 <br>
@@ -67,13 +71,19 @@
                                 {% for person in followers %}
                                     {% with person = person.user_id|user_loader %}
                                         <div class="user-data mt-3 mb-3">
-                                            <a class="btn m-0 p-0" href="{{ url_for('views.profile', username=person.username) }}">
-                                                <img src="{{ url_for('static', filename=person.profile_picture_path) }}"
-                                                     class="rounded" width="50px">
-                                            </a>
-                                            <a class="btn btn-lg fs-5" href="{{ url_for('views.profile', username=person.username) }}">
-                                                @{{ person.username }}
-                                            </a>
+                                            <div class="card">
+                                                <div class="card-body">
+
+                                                    <a class="btn m-0 p-0" href="{{ url_for('views.profile', username=person.username) }}">
+                                                        <img src="{{ url_for('static', filename=person.profile_picture_path) }}"
+                                                             class="rounded" width="50px">
+                                                    </a>
+                                                    <a class="btn btn-lg fs-5" href="{{ url_for('views.profile', username=person.username) }}">
+                                                        @{{ person.username }}
+                                                    </a>
+
+                                                </div>
+                                            </div>
                                         </div>
                                     {% endwith %}
                                 {% endfor %}
@@ -99,15 +109,21 @@
                                 {% for person in followings %}
                                     {% with person = person.author_id|user_loader %}
                                         <div class="user-data mt-3 mb-3">
-                                            <a class="btn m-0 p-0"
-                                               href="{{ url_for('views.profile', username=person.username) }}">
-                                                <img src="{{ url_for('static', filename=person.profile_picture_path) }}"
-                                                     class="rounded" width="50px">
-                                            </a>
-                                            <a class="btn btn-lg fs-5"
-                                               href="{{ url_for('views.profile', username=person.username) }}">
-                                                @{{ person.username }}
-                                            </a>
+                                            <div class="card">
+                                                <div class="card-body">
+
+                                                    <a class="btn m-0 p-0"
+                                                       href="{{ url_for('views.profile', username=person.username) }}">
+                                                        <img src="{{ url_for('static', filename=person.profile_picture_path) }}"
+                                                             class="rounded" width="50px">
+                                                    </a>
+                                                    <a class="btn btn-lg fs-5"
+                                                       href="{{ url_for('views.profile', username=person.username) }}">
+                                                        @{{ person.username }}
+                                                    </a>
+
+                                                </div>
+                                            </div>
                                         </div>
                                     {% endwith %}
                                 {% endfor %}
@@ -120,6 +136,7 @@
                 </div>
             </div>
 
+        </div></div>
         </div>
 
         <div class="navigation mt-3 mb-3">
