--- a/project/templates/newsletter/reset_password.html
+++ b/project/templates/newsletter/reset_password.html
@@ -6,11 +6,11 @@
 
 {% block content %}
     <h1 class="title m-3" align="center">
-        Для того, щоб підтвердити електронну пошту перейдіть за посиланням нижче:
+        Для того, щоб скинути пароль перейдіть за посиланням нижче:
     </h1>
     <p align="center">
         <a class="btn btn-outline-warning mt-5 mb-3 fs-2" href="{{ url }}">
-            Посилання для підтвердження пошти
+            Посилання для скидання паролю
         </a>
     </p>
 {% endblock %}
